--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -12,7 +12,7 @@ body{
   font-size: 22px;
 }
 
-.para.small-para {
+.small-para {
   font-size: 14px;
 }
 
@@ -34,7 +34,7 @@ div.text {
   font-weight: 100;
 }
 
-div.text .child {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
