--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -12,6 +12,28 @@ img {
   font-weight: 900;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.infobox {
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+}
+
+.boxes {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-width: 200px;
+  align-items: center;
+  text-align: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
