--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,35 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* my answer */
+
+.modal {
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+}
+
+.textbox{
+  display: flex;
+  flex-direction: column;
+}
+
+.texthead {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+}
+
+.buttons {
+  margin-top: 16px;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.icon  {
+  flex-shrink: 0;
+}
